Fix right switches being 1px offcenter
Added a Sort By buttons as well for future use.

--- a/css/main.css
+++ b/css/main.css
@@ -2269,16 +2269,17 @@ series-list .tools {
 
 .tools .fadeout {
     opacity: 0;
+    pointer-events: none;
 }
 
-.tools-header {
+.tools_header {
     text-transform: uppercase;
     font-weight: 600;
-    line-height: 1.5;
-    padding: 0px 40px 0px 90px;
+    line-height: 24px;
+    padding: 0px 35px 0px 60px;
 }
 
-.tools-header .tooltip {
+.tools_header .tooltip {
     text-transform: initial;
     font-weight: initial;
 }
@@ -2292,13 +2293,15 @@ series-list .tools {
 .tools_switch {
     color: gray;
     display: inline-block;
-    padding: 16px;
+    /* Is confusing but we need to be 1px closer to the top to account for the
+     * 2px border when a button is active, this somehow brings it back inline */
+    padding: 15px 16px 16px 16px;
     transition: inherit;
 }
 
-.tools_switch .view-as {
+.tools_switch .switch-header {
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 12px;
     transition: inherit;
 }
 
@@ -2315,6 +2318,7 @@ series-list .tools {
 
 .tools_switch .dropdown-toggle {
     color: rgb(240,240,240);
+    cursor: pointer;
 }
 .tools_switch .dropdown-toggle span {
     cursor: pointer;
@@ -2324,7 +2328,6 @@ series-list .tools {
     border-right: 6px solid transparent;
     border-left: 6px solid transparent;
     margin-bottom: 3px;
-    cursor: pointer;
 }
 
 .tools_switch .dropdown-items {
